src/objects/ISSPContactListView__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Button_Activate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Button Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Button_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Button Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Button_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Button Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Button_Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Button Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Button_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Button Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Set_API_Name__c</fullName>
        <label>Field Set API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_API_name__c</fullName>
        <label>Label API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_set__c</fullName>
        <label>Permission set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profiles_Id__c</fullName>
        <label>Profiles Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Filter__c</fullName>
        <label>SOQL Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ISSP Contact List View</label>
</CustomObject>